--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Angela's Portfolio</title>
+  <title>Shyam's Portfolio</title>
 </head>
 <body>
     <h1> Shyam Portfolio</h1>
